// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render a default avatar 1`] = `
<div
  alt="user"
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="avatar-icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render an avatar with provided height and width 1`] = `
<div
  alt="multi-user"
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="avatar-icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render custom props 1`] = `
<div
  alt="user"
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="avatar-icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render fallback user avatar when invalid image is passed in 1`] = `
<div
  alt="placeholder"
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image default avatar-image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="avatar-icon user"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should render fallback user avatar when more than two initials are passed in 1`] = `
<div
  alt="user"
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="avatar-icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<div
  alt="placeholder"
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image default avatar-image"
        src="test-file-stub"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="avatar-icon user"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should render one initial avatar when one initial is passed in 1`] = `
<div
  alt="user"
  class="avatar one"
>
  <span
    aria-hidden="false"
    class="avatar-text"
  >
    J
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when two initials are passed in 1`] = `
<div
  alt="user"
  class="avatar one"
>
  <span
    aria-hidden="false"
    class="avatar-text"
  >
    JS
  </span>
</div>
`;

exports[`Facility should render a default facility avatar 1`] = `
<div
  alt="facility"
  class="avatar nine"
>
  <span
    alt="facility"
    aria-hidden="false"
    aria-label="facility"
    class="avatar-icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with custom props 1`] = `
<div
  alt="facility"
  class="avatar nine"
>
  <span
    alt="facility"
    aria-hidden="false"
    aria-label="facility"
    class="avatar-icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render fallback facility avatar when invalid image is passed in 1`] = `
<div
  alt="placeholder"
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image default avatar-image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="avatar-icon facility"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Facility should render fallback facility avatar when more than two initials are passed in 1`] = `
<div
  alt="facility"
  class="avatar nine"
  initials="JSP"
>
  <span
    alt="facility"
    aria-hidden="false"
    aria-label="facility"
    class="avatar-icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render with a facility avatar with provided height and width 1`] = `
<div
  alt="multi-user"
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="avatar-icon facility"
    role="img"
  />
</div>
`;

exports[`MultiUser should render a default multi-user avatar 1`] = `
<div
  alt="multi-user"
  class="avatar five"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="avatar-icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render a multi user avatar with custom props 1`] = `
<div
  alt="multi-user"
  class="avatar five"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="avatar-icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render with a multi user with provided height and width 1`] = `
<div
  alt="multi-user"
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="avatar-icon multi-user"
    role="img"
  />
</div>
`;
